objects/EUR_CRM_SchedulerConfig__mdt.object
<CustomObject>
    <description>The list of batches to run every hh:mm:ss time.</description>
    <fields>
        <fullName>EUR_CRM_ApexBatchJobClass__c</fullName>
        <label>Apex Batch Job Class</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_ApexScheduledJobClass__c</fullName>
        <label>Apex Scheduled Job Class</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BatchSize__c</fullName>
        <label>Batch size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Days__c</fullName>
        <description>The days of the month. Values between 1 and 31.</description>
        <inlineHelpText>Put the days with a comma as a delimiter, for example, &quot;1,3,5,7,9&quot;, &quot;1&quot;, etc. 
&quot;00&quot; - every day.</inlineHelpText>
        <label>Days</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Hours__c</fullName>
        <description>The hours of the day. Values between 0 and 23.</description>
        <inlineHelpText>Put the hours with a comma as a delimiter, for example, &quot;3,4,5&quot;, &quot;1&quot;, etc.
&quot;00&quot; - every hour.</inlineHelpText>
        <label>Hours</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MinuteQuarters__c</fullName>
        <description>The minute&apos;s quarters.
Minutes 0-14 - the first quarter (0)
Minutes 15-29 - the second quarter (1)
Minutes 29-44 - the third quarter (2)
Minutes 45-59 - the fourth quarter (3).
The possible values are: &quot;0&quot;, &quot;0,1,2,3&quot;, &quot;0,3&quot;, etc. Any combination of 0, 1, 2 and 3 with a comma as a delimiter.</description>
        <inlineHelpText>Put the minute quarters with a comma as a delimiter, for example,&quot;0&quot;, &quot;0,1,2,3&quot;, &quot;0,3&quot;, etc.
&quot;00&quot; - every minute quarter.</inlineHelpText>
        <label>Minute Quarters</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Scheduler Config</label>
    <listViews>
        <fullName>EUR_CRM_Full_View</fullName>
        <columns>MasterLabel</columns>
        <columns>EUR_CRM_ApexScheduledJobClass__c</columns>
        <columns>EUR_CRM_ApexBatchJobClass__c</columns>
        <columns>EUR_CRM_IsActive__c</columns>
        <columns>EUR_CRM_Days__c</columns>
        <columns>EUR_CRM_Hours__c</columns>
        <columns>EUR_CRM_MinuteQuarters__c</columns>
        <columns>EUR_CRM_BatchSize__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Scheduler Configs</pluralLabel>
</CustomObject>